--- a/themes/positive/style.css
+++ b/themes/positive/style.css
@@ -1,5 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic);
-@import url(https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css);
+:host {
+  display: flex;
+  flex-direction: column;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 15px;
+}
 
 html, body, main, section, table, header, ul, p, h1, h2, h3 {
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
@@ -133,14 +138,6 @@ wc-references
 
 section {
   margin-top: 1.5em;
-}
-
-wc-resume {
-  display: flex;
-  flex-direction: column;
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 15px;  
 }
 
 wc-contact {
